# misis2023f-22-02-kursov-m-a

./: CMakeLists.txt  README.md  codeforces.id  status.md
Obsidian Vault/.obsidian/: bookmarks.json
Obsidian Vault/Personal_document/: Личная задача Hexoworld.md
Obsidian Vault/obsidian/: workspace.json
Personal_document/: Документация Hexoworld.md
docs/: Индивидуальный отчёт.md
obsidian/: graph.json  workspace.json
prj.codeforces/: 0581a.cpp  1873c.cpp  1900a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  hb_test.cpp  hexbox.h
prj.cw/hexobox_lib/: CMakeLists.txt  hb_test.cpp  hb_test_old.cpp  hexbox.h  hexbox_old.h
prj.hexoworld/: CMakeLists.txt  hb_test.cpp  hexbox.h
